--- a/assets/whatsapp-chat-support/whatsapp-chat-support.css
+++ b/assets/whatsapp-chat-support/whatsapp-chat-support.css
@@ -239,6 +239,17 @@
         [D] POPUP
  * ====================================================================== */      
 
+    /*.wcs_popup{
+        position: absolute;
+        z-index: 999;
+        width: 300px;
+        bottom: 100%;
+        margin-bottom: 20px;
+        visibility: hidden;
+        max-width: calc(100vw - 60px);
+        right: 0;
+    }*/
+
     .wcs_popup{
         position: absolute;
         z-index: 999;
@@ -247,8 +258,8 @@
         margin-bottom: 20px;
         visibility: hidden;
         max-width: calc(100vw - 60px);
-        /*right: 0;*/
     }
+
 
     /* CLOSE */
 
