--- a/css/style-pricing.css
+++ b/css/style-pricing.css
@@ -382,11 +382,14 @@ span {
 }
 
 .header-pricing {
-  position: -webkit-sticky; /* Safari */
-  position: sticky;
+  /*position: -webkit-sticky; /* Safari 
+  position: sticky;*/
+  position: -webkit-fixed;
+  position: fixed;
   top: 0;
   z-index:10;
   background : #f5f5f5;
+  width : 100%;
 }
 
 sub {
