--- a/css/style-pricing.css
+++ b/css/style-pricing.css
@@ -382,11 +382,14 @@ span {
 }
 
 .header-pricing {
-  position: -webkit-sticky; /* Safari */
-  position: sticky;
+  /*position: -webkit-sticky; /* Safari 
+  position: sticky;*/
+  position: -webkit-fixed;
+  position: fixed;
   top: 0;
   z-index:10;
   background : #f5f5f5;
+  width : 100%;
 }
 
 sub {
@@ -809,6 +812,12 @@ sup {
    .harga {
     font-size : 28px;
   }
+
+  .header-pricing {
+    left : 0;
+    right : 0;
+    width : auto;
+  }
 }
 
 /*@media screen and (min-width: 769px) {
@@ -929,7 +938,7 @@ sup {
   }
 
   .header-pricing {
-    top : 80px;
+    margin-top : 80px;
   }
 
   .bg-thumbnail h4 {
