--- a/css/css.css
+++ b/css/css.css
@@ -27,6 +27,13 @@
     -webkit-animation: spin 2s linear infinite;
     animation: spin 2s linear infinite;
 }
+
+.embed-youtube {
+  margin-left: auto;
+  margin-right: auto;
+  max-width : 550px;
+}
+
 @-webkit-keyframes spin {
   0% { -webkit-transform: rotate(0deg); }
   100% { -webkit-transform: rotate(360deg); }
