--- a/css/css.css
+++ b/css/css.css
@@ -31,7 +31,12 @@
 .embed-youtube {
   margin-left: auto;
   margin-right: auto;
-  max-width : 550px;
+  max-width : 900px;
+}
+
+.pad-fix {
+  padding-left : 0;
+  padding-right : 0;
 }
 
 @-webkit-keyframes spin {
