--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,15 @@ body {
   color : #fff;
 }
 
+#editor {
+  padding-left : 5px;
+  background: #fff;
+  font-weight : 100;
+  height : 80px;
+  border : 1px solid #ced4da;
+  overflow : auto;
+}
+
 @media only screen and (max-width: 767px) {
   .main-cont {
     margin-top:105px;
