--- a/css/proof.css
+++ b/css/proof.css
@@ -8,17 +8,22 @@
   top : 10px;
   left : 10px;
   z-index : 90;
+  width : 100%;
 }
 
 .proof-wrapper {
+  position: absolute;
   color : #000;
   width : 100%;
   max-width : 360px;
   height : auto;
-  background-color: #f7f7f7;
+  background-color: #fff;
+  border : 2px solid #f7f7f7;
   border-radius : 10px;
   padding : 15px;
   display : inline-flex;
+  top : 0;
+  left : 0;
 }
 
 .proof_image img {
@@ -37,18 +42,19 @@
 
 .proof_star {
   text-align: right;
-  line-height: 12px;
   width : 40%;
-}
-
-.proof_star i {
-  color : #ffc100;
+  margin-top: -6px;
+  color : #ffc100 !important;
 }
 
 .proof_name {
   font-weight : bold;
   line-height: 12px;
   width : 60%;
+}
+
+.proof_comments {
+  line-height : 20px;
 }
 
 @media(max-width:379px) {
@@ -58,5 +64,13 @@
 
   .proof_comments,.proof_name {
     font-size : 12px;
+  }
+
+  .proof_comments {
+    line-height : 17px;
+  }
+  
+  .proof_star {
+    margin-bottom: 2px;
   }
 }
